Updated Admin End point Swagger Annotations
