# src/app/Http/Controllers/Api/V1/AdminsController.php
@@ -26,6 +26,62 @@ class AdminsController extends Controller
      *    path="/api/v1/admin/user-listing",
      *    summary="Get all list of posts",
      *    security={ {"bearerToken": {}} },
+     *    @OA\Parameter(
+     *      name="page",
+     *      in="query",
+     *      @OA\Schema(type="integer")
+     *    ),
+     *    @OA\Parameter(
+     *      name="limit",
+     *      in="query",
+     *      @OA\Schema(type="integer")
+     *    ),
+     *    @OA\Parameter(
+     *      name="sortBy",
+     *      in="query",
+     *      @OA\Schema(type="string")
+     *    ),
+     *    @OA\Parameter(
+     *      name="desc",
+     *      in="query",
+     *      @OA\Schema(
+     *        type="boolean",
+     *        enum={"true","false"},
+     *      )
+     *    ),
+     *    @OA\Parameter(
+     *      name="first_name",
+     *      in="query",
+     *      @OA\Schema(type="string")
+     *    ),
+     *    @OA\Parameter(
+     *      name="email",
+     *      in="query",
+     *      @OA\Schema(type="string")
+     *    ),
+     *    @OA\Parameter(
+     *      name="phone",
+     *      in="query",
+     *      @OA\Schema(type="string")
+     *    ),
+     *    @OA\Parameter(
+     *      name="address",
+     *      in="query",
+     *      @OA\Schema(type="string")
+     *    ),
+     *    @OA\Parameter(
+     *      name="created_at",
+     *      in="query",
+     *      @OA\Schema(type="string")
+     *    ),
+     *    @OA\Parameter(
+     *      name="marketing",
+     *      in="query",
+     *      @OA\Schema(
+     *        type="string",
+     *        enum={"1","0"},
+     *      )
+     *    ),
      *    @OA\Response(response=200, description="OK"),
      *    @OA\Response(response=401, description="Unauthorized"),
      *    @OA\Response(response=404, description="Not Found"),
